syntax = "proto3";

package message;

option go_package = "github.com/docbull/hyperledger-fabric-udp/inlab-consensus";

service ConsensusService {
}

message ConsensusNode {
        NodeInformation LeaderNode = 1;
        OverlayStructure Overlay = 2;
}

message OverlayStructure {
        repeated TreeNode Tree = 1;
}

message TreeNode {
        NodeInformation Node = 1;
        repeated NodeInformation SubNode = 2;
}

message NodeInformation {
        string Name = 1;
        string IP = 2;
}

enum StatusCode {
        Unknown = 0;
        Ok = 1;
        Failed = 2;
}

message Status {
        StatusCode Code = 1;
}
